--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang=en>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no">
 <title>Flaura & Fauna </title>
 <link rel = "icon" href =  "img/f&f.png" > <!--tab logo-->
  <link rel ="stylesheet" type="text/css" href="css.css"> <!-- Link to external css sheet named css-->
