--- a/index.html
+++ b/index.html
@@ -188,15 +188,15 @@
 <!--cards ended-->
 <!--Beginning of Footer-->
 <section id="footer">
-        <div class="header" style="text-align:center">
+        <div class="header" style="text-align:center; font-size: 20px;">
             <h3 >Follow our pages on social media</h3>
         </div>
-    <div class="social_media" style="padding: 2%;">
+    <div class="social_media" >
         <ul>
-            <li> <a href=""><img src="social media handle images/fb.png" alt="" width="50px"></a></li>
-            <li> <a href=""><img src="social media handle images/wtsap.png" alt="" width="50px"></a></li>
-            <li> <a href=""><img src="social media handle images/mail.png" alt="" width="50x"></a></li>
-            <li> <a href=""><img src="social media handle images/insta.png" alt="" width="50px"></a></li>
+          <li> <a href=""><img src="social media handle images/fb.png" alt="facebook"></a></li>
+          <li> <a href=""><img src="social media handle images/wtsap.png" alt="whatsapp"></a></li>
+          <li> <a href=""><img src="social media handle images/mail.png" alt="email"></a></li>
+          <li> <a href=""><img src="social media handle images/insta.png" alt="instagram"></a></li>
         </ul>
     </div>
     <div class="columns">
